[package]
name = "yew-midi"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-logger = "0.2"
yew = "0.18.0"
yew-router = "0.15.0"
yewtil = "0.4.0"
log = "0.4"
serde = { version =  "1.0.126", features = ["derive"] }
anyhow = "1.0.41"
yewdux = "^0.6"
serde_json = "1.0.59"
midir = "0.7.0"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3", features = ["console", "Window"]}
js-sys = "0.3"
wasm-bindgen = "0.2"
send_wrapper = "0.5.0"